--- a/style.css
+++ b/style.css
@@ -7,12 +7,13 @@ header {
     background-color: #333;
     color: #fff;
     padding: 10px;
+
 }
 
 main {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     padding: 20px;
 }
