--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ header {
     background-color: #333;
     color: #fff;
     padding: 10px;
+    text-align: center;
 
 }
 
@@ -15,6 +16,7 @@ main {
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
+
     padding: 20px;
 }
 
